Added google log and html for  top navbar.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 <html>
 <head>
 <link href=".resources/css/index.css" type="text/css" rel="stylesheet">
+<nav class="header-list">
+    <ul class="left-side-head">
+        <li><img src="./resources/googlelogo_color_92x30dp.png" alt="Google Logo" width="92" height="32"></li>
+        <li>
+            <form>
+                <input type="text" name="text" class="search">
+                <button type="submit">Search</button> <!-- replace with icon, will have one rounded side  -->
+            </form>
+        </li>
+    </ul>
+    <ul class="right-side-head">
+        <li><a class="icon" href="google-apps.aps">Google apps</a></li> <!--change to icon-->
+        <li><button type="submit">Sign In</button></li>
+    </ul>
+</nav>
 
 </head>
 
