html layout complete & some css styling done.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-<link href=".resources/css/index.css" type="text/css" rel="stylesheet">
-<nav class="header-list">
+<link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+<nav class="header-search">
     <ul class="left-side-head">
         <li><img src="./resources/googlelogo_color_92x30dp.png" alt="Google Logo" width="92" height="32"></li>
         <li>
@@ -18,14 +18,39 @@
         <li><button type="submit">Sign In</button></li>
     </ul>
 </nav>
-
+<nav>
+    <ul class="header-nav">
+        <li><a href="all.asp">All</a></li>
+        <li><a href="news.asp">News</a></li>
+        <li><a href="maps.asp">Maps</a></li>
+        <li><a href=videos.asp>Videos</a></li>
+        <li><a href="shopping.asp">Shopping</a></li>
+        <li><a href="more.asp">More</a></li>
+        <li><a href="settings.asp">Settings</a></li>
+        <li><a href="tools.asp">Tools</a></li>
+    </ul>
+</nav>
 </head>
 
 <body>
-
+    <ul>
+        <li><p>website link</p><a href="result-1.asp">Fill with words</a><p>heres a link to a website</p></li>
+        <li><a></a><p></p></li>
+        <li><a></a><p></p></li>
+        <li><a></a><p></p></li>
+        <li><a></a><p></p></li>
+    </ul>
 </body>
 
 <footer>
-
+    <ul class="location">
+        <li><p>Jupiter</p></li>
+    </ul>
+    <ul>
+        <li><a href="help.asp">Help</a></li>
+        <li><a href="send-feedback.asp">Send Feedback</a></li>
+        <li><a href="privacy.asp">Privacy</a></li>
+        <li><a href="terms.asp">Terms</a></li>
+    </ul>
 </footer>
 </html>
