--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <p>About 169,000,000 results (0.61 seconds) </p>
+    <p id="search-speed">About 169,000,000 results (0.61 seconds) </p>
     <ul class="search-links">
         <li><p>https://en.wikipedia.org > wiki > Moon</p>
             <a href="result-1.asp">Moon - Wikipedia</a>
