added related searches & styles

--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
             <p>A moon is an object that orbits a planet or something else that is not a star. Besides planets, moons can circle dwarf planets, large asteroids, and other bodies.</p>
         </li>
     </ul>
+    <p id="rel-search">Related searches</p>
+    <div class="extra-searches">
+        <ul class="search-more1">
+            <li><a href="r-1.asp"><ion-icon name="search-outline"></ion-icon> what is the moon for kids</a></li>
+            <li><a href="r-2.asp"><ion-icon name="search-outline"></ion-icon> is the moon a star</a></li>
+            <li><a href="r-3.asp"><ion-icon name="search-outline"></ion-icon> is the moon a planet</a></li>
+            <li><a href="r-4.asp"><ion-icon name="search-outline"></ion-icon> facts about the moon</a></li>
+        </ul>
+        <ul class="search-more2">
+            <li><a href="r-5.asp"><ion-icon name="search-outline"></ion-icon> moon meaning</a></li>
+            <li><a href="r-6.asp"><ion-icon name="search-outline"></ion-icon> how old is the moon</a></li>
+            <li><a href="r-7.asp"><ion-icon name="search-outline"></ion-icon> how far is the moon from earth</a></li>
+            <li><a href="r-8.asp"><ion-icon name="search-outline"></ion-icon> what is the moon made of</a></li>
+        </ul>
+    </div>
     <ul class="pages">
         <li><a href="page-1.asp">1</a></li>
         <li><a href="page-2.asp">2</a></li>
