aligned all navbar buttons, added more footer navigation & styled better.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
         <div class="footer-all">
             <ul class="location">
                 <li><p>Jupiter, Solar System</p></li>
+                <li><p id="split">From your Internet address</p></li>
+                <li><a class="location-link" href="precise.asp">Use precise location</a></li>
+                <li><a class="location-link" href="Learn-more.asp">Learn more</a></li>
             </ul>
             <ul class="footer-nav">
                 <li><a href="help.asp">Help</a></li>
