fixed search bar icon issue & added boxshadow.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
                 <li>
                     <form class="full-search">
                         <input type="search" name="text" class="search" title="Search" value="What is the moon?">
-                        <button class="search-b" type="submit"><ion-icon name="search"></ion-icon></button> <!-- replace with icon, will have one rounded side  -->
                     </form>
                 </li>
             </ul>
             <ul class="right-side-head">
-                <li><a class="icon" href="google-apps.aps"><ion-icon name="apps"></ion-icon></a></li> <!--change to icon-->
+                <li><a class="icon" href="google-apps.aps"><ion-icon name="apps"></ion-icon></a></li>
                 <li><button type="submit">Sign In</button></li>
             </ul>
         </nav>
